force-app/main/default/objects/HP_Offre__c/HP_Offre__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>HP Offres</label>
</CustomObject>