force-app/main/default/objects/HP_Offre__c/fields/marqueCode__c.field-meta.xml
<CustomField>
    <fullName>marqueCode__c</fullName>
    <label>Code marque</label>
    <length>20</length>
    <type>Text</type>
</CustomField>