force-app/main/default/objects/HP_Offre__c/fields/offreCode__c.field-meta.xml
<CustomField>
    <fullName>offreCode__c</fullName>
    <externalId>true</externalId>
    <label>Code Offre</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>