force-app/main/default/objects/HP_Offre__c/fields/offreId__c.field-meta.xml
<CustomField>
    <fullName>offreId__c</fullName>
    <label>Id Offre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>