force-app/main/default/objects/HP_Offre__c/fields/offreLibelle__c.field-meta.xml
<CustomField>
    <fullName>offreLibelle__c</fullName>
    <label>Libellé Offre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>