force-app/main/default/objects/HP_Offre__c/fields/packId__c.field-meta.xml
<CustomField>
    <fullName>packId__c</fullName>
    <label>Id Pack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>