force-app/main/default/objects/HP_Offre__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>offreCode__c</columns>
    <columns>offreId__c</columns>
    <columns>offreLibelle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>